# PointCloud_Tutorial

./: LICENSE  README.md  ~$picture.pptx
Chapter1/Chapter1_en/: Chapter1 Basic knowledge of point cloud.md
Chapter1/Chapter1_zh/: 第一章 点云基础知识.md
Chapter2/Chapter2_en/: Chapter2 Point Cloud Software.md
Chapter2/Chapter2_en/files/: bottleright.pcd  bunny1.pcd  bunny2.pcd  dragon.wrl  rabbit1.pcd
Chapter2/Chapter2_zh/: 第二章 点云软件.md
Chapter2/Chapter2_zh/files/: bottle1.vtk  bottleleft.pcd  cuboid_normal.pcd  rabbit2.pcd
Chapter3/Chapter3_en/: Chapter3 Point cloud file format.md
Chapter3/Chapter3_en/files/: cube.off  cube.vtk
Chapter3/Chapter3_zh/: 第三章 点云文件格式.md
Chapter3/Chapter3_zh/files/: bridge_pier.txt  horse.off
Chapter4/Chapter4_en/: Chapter4 Point Cloud Library.md
Chapter4/Chapter4_en/files/: CMakeLists.txt  airplane.pcd  bridge_pier.pcd  bunny3.pcd  bunny4.pcd  chair.pcd
Chapter4/Chapter4_zh/: 第四章 Point Cloud Library.md
Chapter4/Chapter4_zh/files/: bottle.pcd  chair.txt  cuboid.pcd  milk.pcd  test1.cpp
Chapter5/Chapter5_en/: Chapter5 Clustering.md
Chapter5/Chapter5_zh/: 第五章 聚类.md
Chapter6/Chapter6_en/: Chapter6 Deep Learning in point cloud.md
Chapter6/Chapter6_zh/: 第六章 点云中的深度学习.md
Chapter7/Chapter7_en/: Chapter7 Object Detection.md
Chapter7/Chapter7_zh/: 第七章 物体检测.md
Chapter8/Chapter8_en/: Chapter8 Feature.md
Chapter8/Chapter8_zh/: 第八章 特征点.md
